# clue-device

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  dockerfile
config/: log4rs.yaml
libs/rfid-rs/: Cargo.toml
libs/rfid-rs/src/: error.rs  lib.rs  picc.rs  register.rs  util.rs
pages/: index.html
src/: main.rs
src/config/: config.rs  setup.rs
src/logging/: logging.rs  logging_util.rs  mod.rs
src/rfid/: mod.rs  rfid.rs  rfid_manger.rs
src/utils/: mod.rs
src/video_handler/: default_images.rs  media_manager.rs  mod.rs  player.rs
src/vlc_handler/: default_images.rs  image_generation.rs  mod.rs  player.rs  vlc_manager.rs
src/web_server/: file_action_handler.rs  mod.rs
