[package]
name = "clue-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"
serde_urlencoded = "0.7"
vlc-rs = {version = "0.3.0", path = "../vlc-rs"}
tiny_http = "0.12.0"
tera = "1.18.1"
log = "0.4.17"
log4rs = {version = "1.2.0", feature = ["rolling_file_appender"]}
image = "0.24.6"
rusttype = "0.9.3"
local-ip-address = "0.5.1"
mfrc522 = "0.5.0"
unicode-linebreak = "0.1.4"
sled = "0.34.1"


[dependencies.multipart]
path = "./multipart"
version = "0.18.0"

