[package]
name = "mfrc522"
version = "0.5.0"
edition = "2021"
description = "A platform agnostic driver to interface the MFRC522 (RFID reader/writer)"
keywords = ["rfid", "mfrc522", "embedded-hal", "mifare"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
std = []

[dependencies]
embedded-hal = "0.2"
heapless = "0.7"

[dev-dependencies]
linux-embedded-hal = "0.3.2"
anyhow = "1.0"

[[example]]
name = "rpi"
required-features = ["std"]
